--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -91,6 +91,13 @@ ul.grid {
   justify-content: center;
 }
 
+.btns {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 10rem;
+}
+
 /*-------------
  	Header
 -------------*/
